...
    ) {
        Row(
            modifier =
                Modifier
                    .fillMaxWidth()
                    .height(48.dp)
                    .testTag("country_row")
                    .clickable(
                        interactionSource,
                        indication = ripple(bounded = true, color = MaterialTheme.colorScheme.serverListSecondaryColor),
                    ) {
                        onExpandChange(!expanded)
                    }.padding(start = 12.dp, end = 8.dp),
...
                painter = painterResource(if (expanded) R.drawable.ic_server_list_open else R.drawable.ic_server_list_close),
                contentDescription = "Expand",
                colorFilter = ColorFilter.tint(MaterialTheme.colorScheme.serverListSecondaryColor),
                alpha = if (expanded) 1f else 0.4f,
                modifier =
                    Modifier
                        .testTag("country_chevron")
                        .size(32.dp)
                        .padding(8.dp)
                        .clickable(
                            interactionSource = remember { MutableInteractionSource() },
                            indication =
                                ripple(
...
            Spacer(modifier = Modifier.width(12.dp))
        }
        if (isAvailable) {
            DataCenterLatencyIcon(latency)
            Spacer(modifier = Modifier.width(12.dp))
        }
        DataCenterFavouriteIcon(isFavorite, testTag = "fav_icon") {
            viewModel.toggleFavorite(item)
        }
    }
}

@Composable
...
