...
    if (shouldPlayHapticFeedback) {
        haptics.performHapticFeedback(HapticFeedbackType.LongPress)
        onHapticFeedbackHandled()
    }
    Box(
        modifier =
            Modifier.size(95.dp).testTag("home_connect_button").clickable(
                interactionSource = remember { MutableInteractionSource() },
                indication = null,
            ) {
                onConnectButtonClick()
            },
    ) {
...
            description = "",
            type = ProtocolConnectionStatus.Connected,
        )
    private val location =
        LocationInfoState.Success(
            LocationInfo(
                country = "United States",
                nodeName = "New York",
                nickName = "Liberty",
                locationBackground = LocationBackground.Flag(R.drawable.dummy_flag),
            ),
        )

...
