...

            Image(
                painter = painterResource(R.drawable.ic_location_search),
                contentDescription = null,
                modifier =
                    Modifier
                        .testTag("search_open")
                        .hapticClickable {
                            viewModel.toggleSearch()
                        },
                colorFilter = ColorFilter.tint(MaterialTheme.colorScheme.serverListSecondaryColor.copy(alpha = 0.70f)),
            )
        }
...
